# rag-search-system

./: .gitignore  README.md  example.py  example_create_index.py  example_generate_docs.py  example_query.py  pyproject.toml  run_pipeline.py
examples/: example_create_index.py  example_generate_docs.py  example_query.py  generate_test_docs.py  run_pipeline.py
examples/synthetic_data/: example_generate_docs.py
rag_pipeline/: __init__.py  chroma_manager.py  config.py  core.py  data_loader.py  query_engine.py
rag_pipeline/core/: core.py
rag_pipeline/data/test_docs/: Project_Overview_2023-01-15.docx  Project_Overview_2023-01-15.txt  Project_Overview_2023-06-20.docx  Project_Overview_2023-06-20.txt  Technical_Specification_2022-12-10.docx  Technical_Specification_2022-12-10.txt  Technical_Specification_2023-03-15.docx  Technical_Specification_2023-03-15.txt
rag_pipeline/db/: chroma_manager.py
rag_pipeline/engine/: data_loader.py  query_engine.py
rag_pipeline/tools/: inspect_chroma.py
web/: .gitignore  README.md
web/backend/: package-lock.json  package.json  server.js
web/backend/handlers/: rag_handler.py
web/frontend/: index.html  package-lock.json  package.json
web/frontend/src/: App.svelte
